[package]
name = "swapct"
version = "0.1.0"
authors = ["SwapCT Authors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = { version = "3", features = ["serde"] }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9.1"
merlin = "2.0.0"
