[package]
name = "omniring"
version = "0.1.0"
authors = ["SwapCT Authors"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "plots"
path = "src/bin/plots.rs"

[dependencies]
curve25519-dalek = { version = "3", features = ["serde"] }
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.9.1"
merlin = "2.0.0"
rayon = "1.5.0"
byteorder = "1"
aes-gcm-siv = "0.9.0"
hmac = "0.10.1"
bytes = "0.5.6"
serde_cbor = "0.11.1"
serde_json = "1.0.59"
structopt = "0.3.20"
indicatif = "0.15.0"